--- a/UOW/Test.Unit/Test.Unit.csproj
+++ b/UOW/Test.Unit/Test.Unit.csproj
@@ -5,6 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.0.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.2" />
+    <PackageReference Include="NUnit" Version="3.10.1" />
+    <PackageReference Include="NUnit.Console" Version="3.8.0" />
+    <PackageReference Include="NUnit.ConsoleRunner" Version="3.8.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+  </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UOW-Consumer-Context\UOW.Consumer.Repository.csproj" />
+    <ProjectReference Include="..\UOW\UOW.csproj" />
   </ItemGroup>
 </Project>
